@@ -1,3 +1,10 @@
+2008-02-01  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/playlist-treeview.c:
+
+	Refactor: Put the code to unpopulate a container node, into a separate
+	function.
+
 2008-01-30  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/playlist-treeview.c:
